
CHANGELOG for cope live editor

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* remove ThreadLocal usage
	THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE
	- the filter is now a separate class, you need to adjust your web.xml
* bugfix: image preview did not work without cookies
* cope live editor is now it's own project