@@ -139,7 +139,7 @@
 				<pathelement location="lib/junit.jar" />
 				<pathelement location="lib/exedio-cope.jar" />
 			</classpath>
-			<test name="com.exedio.cope.editor.PackageTest" todir="build/testresults" outfile="editor" />
+			<test name="com.exedio.cope.live.PackageTest" todir="build/testresults" outfile="editor" />
 			<assertions><enable/></assertions>
 		</junit>
 	</target>
