@@ -1,34 +1,0 @@
-/*
- * Copyright (C) 2004-2009  exedio GmbH (www.exedio.com)
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- */
-
-package com.exedio.cope.editor;
-
-import java.io.Serializable;
-
-import com.exedio.cope.Item;
-import com.exedio.cope.StringField;
-
-interface Target extends Serializable
-{
-	String getID();
-	boolean exists();
-	String getDescription();
-	boolean isLive();
-	String get(StringField feature, Item item);
-	void save(Anchor anchor);
-}
