@@ -16,19 +16,13 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-package com.exedio.cope.editor;
+package com.exedio.cope.live;
 
-import junit.framework.Test;
-import junit.framework.TestCase;
-import junit.framework.TestSuite;
-
-public class PackageTest extends TestCase
+/**
+ * If you want persistent http sessions,
+ * make implementions of this interface serializable.
+ */
+public interface Session
 {
-	public static Test suite()
-	{
-		final TestSuite suite = new TestSuite();
-		suite.addTestSuite(DraftTest.class);
-		suite.addTestSuite(SaveTest.class);
-		return suite;
-	}
+	String getName();
 }
