@@ -27,8 +27,8 @@ import javax.servlet.http.HttpServletResponse;
 import com.exedio.cope.IntegerField;
 import com.exedio.cope.Item;
 import com.exedio.cope.StringField;
-import com.exedio.cope.editor.Session;
-import com.exedio.cope.editor.util.LiveFilter;
+import com.exedio.cope.live.Session;
+import com.exedio.cope.live.util.LiveFilter;
 import com.exedio.cope.pattern.MapField;
 import com.exedio.cope.pattern.Media;
 import com.exedio.cope.pattern.MediaFilter;
